package uk.ac.glos.CT5025.S1802423;

public class Number extends Cell {
    public Number() {
        super();
    }
}
